<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group >
        <item
            android:id="@+id/play_item"
            android:enabled="true"
            android:icon="@drawable/ic_play_arrow"
            android:title="@string/play_menu_hint"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/pause_item"
            android:enabled="false"
            android:icon="@drawable/ic_pause"
            android:title="@string/pause_menu_hint"
            android:visible="false"
            app:showAsAction="ifRoom" />
    </group>
    <item
        android:id="@+id/settings_item"
        android:enabled="true"
        android:title="@string/setting_menu_hint" />
</menu>