<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <!--android:background="#4a4a4a">-->


    <RadioGroup
        android:id="@+id/radioGroup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:checkedButton="@+id/radioButton_ST"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/method_text_options"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <RadioButton
            android:id="@+id/radioButton_WT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/method_no_text"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton_ST"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/method_source_text"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton_NT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/method_native_text"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:checkedButton="@+id/radioButton_SL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_text">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/method_sound_options"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <RadioButton
            android:id="@+id/radioButton_SL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/method_simple_listen"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton_PA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/method_pause_after"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton_PB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/method_pause_before"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton_RA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/method_record_after"
            android:textColor="@android:color/black"
            android:clickable="false"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton_RB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/method_record_before"
            android:textColor="@android:color/black"
            android:clickable="false"
            android:textSize="18sp" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>
