<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/TextViewTopTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="8dp"
        android:gravity="top|center"
        android:text="@string/app_logo_top"
        android:textColor="@color/logo_color"
        android:textSize="@dimen/logo_size"></TextView>
    <TableLayout
        android:id="@+id/TableLayout01"
        android:stretchColumns="*"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal">

            <ImageView
                android:id="@+id/ImageView2_Left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:contentDescription="London"
                android:src="@drawable/london"></ImageView>

            <ImageView
                android:id="@+id/ImageView2_Right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:contentDescription="Moscow"
                android:src="@drawable/moscow"
></ImageView>
        </TableRow>
        <TableRow
            android:id="@+id/TableRow02"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal">

            <ImageView
                android:id="@+id/ImageView3_Left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:src="@drawable/paris"
                android:contentDescription="Paris"></ImageView>

            <ImageView
                android:id="@+id/ImageView3_Right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:src="@drawable/rome"
                android:contentDescription="Rome"></ImageView>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/TextViewBottomTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/app_logo_bottom"
        android:textColor="@color/logo_color"
        android:textSize="@dimen/logo_size"></TextView>
    <TextView
        android:id="@+id/TextViewBottomVersion"
        android:text="@string/app_version_info"
        android:textSize="@dimen/version_size"
        android:textColor="@color/version_color"
        android:background="@color/version_bkgrd"
        android:layout_height="fill_parent"
        android:lineSpacingExtra="@dimen/version_spacing"
        android:layout_width="fill_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"></TextView>
</LinearLayout>